0025020: checkoverlapedges doesn't have the check for degenerated edges

the check for degenerated edges added
Test case for issue CR25020